откат до стабильной версии